# cuery

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  build.sh  environment.yaml  install.sh  pyproject.toml  recipe.yaml  ultimos_cambios.md
.github/workflows/: release.yml
actors/: llm-audit-pipeline-sm.excalidraw.json  llm-audit-pipeline.excalidraw.json
actors/assign_topics/.actor/: Dockerfile
actors/automagic/.actor/: Dockerfile
actors/brands/.actor/: dataset_schema.json
actors/classify/.actor/: Dockerfile
actors/entities/.actor/: Dockerfile
actors/funnel/.actor/: Dockerfile  dataset_schema.json  input_schema.json
actors/geo/.actor/: Dockerfile  README.md  actor.json  example_input.json  input_schema.json
actors/keywords/.actor/: Dockerfile
actors/llm_mentions/.actor/: Dockerfile  README.md  actor.json  dataset_schema.json  example_input.json  input_schema.json
actors/llm_mentions/src/: __main__.py
actors/topics/.actor/: Dockerfile  key_value_store_schema.json
docs/source/: index.rst
notebooks/: README_job_generation.md  example.ipynb  examples.ipynb  generate_jobs_from_dirce_advanced.py  sectors.ipynb  sectors_analysis.ipynb  seo.ipynb  seo.py  serp.ipynb  topics.ipynb  usage.ipynb
src/cuery/: __init__.py  asy.py  call.py  cli.py  context.py  cost.py  pretty.py  prompt.py  response.py  task.py  utils.py
src/cuery/actors/: __init__.py  funnel.py  llm_mentions.py
src/cuery/seo/: funnels.py  geo.py  keywords.py  seo.py  serps.py  tools.py  traffic.py
src/cuery/seo/aio/: hasdata.py
src/cuery/server/: server.py
src/cuery/tools/: __init__.py  abs.py  dedupe.py  entities.py  topics.py
src/cuery/topics/: keywords.py  oneshot.py  serp.py
src/cuery/work/: __init__.py  models.py  models.yaml  prompts.yaml  tasks.py  tasks.yaml
test/: test_setup.py
