[project]
name = "cuery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thomas Buhrmann", email = "thomas@graphext.com" }]
requires-python = ">=3.11"
dependencies = [
    "instructor[anthropic,google-generativeai,litellm]>=1.8.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "litellm>=1.69.1",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "ruff>=0.11.9",
    "typer>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99

select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # Pyupgrade
    "S",    # Bandit (security),
    "B",    # Bugbear
    "C4",   # Comprehensions
    "ISC",  # Implicit string concat
    "ICN",  # Import conventions
    "I001", # isort
    "Q",    # Quotes
    "SIM",  # Simplify
    "ERA",  # eradicate (commented out code)
    "PIE",
    "PD",   # Pandas
    "PLC",
    "PLE",
    "PLR",
    "PLW",  # Pylint extensions
    "RET",  # Return statements
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
