[project]
name = "cuery"
version = "0.33.4"
description = "Prompt (cue) management and execution for tabular data."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Thomas Buhrmann", email = "thomas@graphext.com" }]
keywords = [
    "ai",
    "llm",
    "structured output",
    "prompt management",
    "prompt engineering",
    "data science",
    "data analysis",
    "tabular data",
    "data processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/graphext/cuery", Documentation = "https://cuery.readthedocs.io/" }
requires-python = ">=3.10"
dependencies = [
    "async-lru",
    "aiohttp",
    "datamodel-code-generator>=0.32.0",
    "fastapi",
    "fastapi-mcp",
    "glom",
    "google-genai>=1.56.0",
    "instructor[anthropic,google-genai]>=1.11.0",
    "jsonschema",
    "levenshtein>=0.27.1",
    "litellm>=1.69.1,<=1.77.1",
    "openai>=1.109",
    "pandas>=2.2.3",
    "pre-commit",
    "pyarrow>=20.0.0",
    "pydantic[email]>=2.0.0",
    "pyyaml",
    "rich>=13.9.4",
    "tiktoken>=0.9.0",
    "typer",
    "uvicorn",
    "markdown",
    "tldextract>=5.3.0",
    "python-dotenv",
    "tenacity",
]

[tool.rattler]
build = 0

[project.scripts]
cuery = "cuery.cli:app"


[project.optional-dependencies]
seo = [
    "apify",
    "google-ads<28.0.0",
    "gradio>=5.9.1",
    "matplotlib",
    "plotly[express]>=6.3.0",
]


[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipython>=9.2.0", "jupyter>=1.1.1", "ruff>=0.11.9"]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-autoapi>=3.6.0",
    "sphinx>=8.2.3",
    "autodoc_pydantic",
]


[tool.uv]
python-preference = "managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.per-file-ignores]
"test/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

ignore = ["PD901"]

select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # Pyupgrade
    "S",    # Bandit (security),
    "B",    # Bugbear
    "C4",   # Comprehensions
    "ISC",  # Implicit string concat
    "ICN",  # Import conventions
    "I001", # isort
    "Q",    # Quotes
    "SIM",  # Simplify
    "ERA",  # eradicate (commented out code)
    "PIE",
    "PD",   # Pandas
    "PLC",
    "PLE",
    "PLR",
    "PLW",  # Pylint extensions
    "RET",  # Return statements
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
